<resources>
    <string name="app_name">Project2DAM</string>
    <!--Pantalla Inicial-->
    <string name="btnCuentas">Inicia Sesion con Google</string>
<<<<<<< HEAD
    <string name="btnInicia">Inicia Sesión</string>
=======
    <string name="btnInicia">LOGIN</string>
>>>>>>> main
    <string name="refCrear">¿No tienes cuenta? <b> Crea una aquí! :)</b></string>
    <string name="registrate">REGISTRATE</string>
    <string name="nombreCompleto">Nombre completo</string>
    <string name="nombreEmpresa">Nombre empresa</string>
    <string name="correo">Correo electrónico</string>
    <string name="telefono">Teléfono</string>
    <string name="pass">Contraseña</string>
    <string name="confirmarPass">Confirmar contraseña</string>
    <string name="terminos">Aceptar Términos y Condiciones de uso</string>
    <string name="verMas"><u>Haz click aquí para ver más</u></string>
    <string name="bienvenido">Bienvenido</string>
    <string name="registraEmpresa">Registrate para continuar como Empresa</string>
    <string name="registraCliente">Registrate para continuar como Cliente</string>
    <string name="registrarCoche">Registra tu coche para continuar </string>
    <string name="modelo">Modelo</string>
    <string name="Matricula">Matricula</string>
    <string name="Macra">Marca</string>
    <string name="Color">Color</string>
    <string name="Date">Año</string>
    <string name="RegistrarCoche">Registrar Coche</string>
    <string name="errorRegistro">Se ha producido un error registrando al usuario, por favor, reinicie la app si el problema persiste</string>
    <string name="errorContrasenas">Las contraseñas deben de ser iguales, escribelas de nuevo, por favor</string>
    <string name="errorCampos">Debes de rellenar todos los campos para poder registrarte</string>
    <string name="errorTerminos">Debes de aceptar nuestros terminos para poder registrarte!</string>
<<<<<<< HEAD
    <string name="errorInicio">Email o contraseña incorrectos! :(</string>
    <string name="prefs_file">com.example.project2dam.PREFERENCE_FILE_KEY</string>
    <string name="default_web_client_id" translatable="false">87382517071-dpil99tf34ufdjvkfip6ium6k84d0hqj.apps.googleusercontent.com</string>
=======
    <string name="login">LOGIN</string>
    <string name="forg">Forgot Password?</string>


    <string name="prefs_file">com.example.project2dam.PREFS_FILE</string>
>>>>>>> main


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
