<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/bg_gradient"
    tools:context=".ActivityAddCar">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="379dp"
        android:layout_height="441dp"
        android:background="@drawable/btn_bordes_redondos_transparente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="220dp"
            android:layout_height="106dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/logo_full_white_notitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/bienvenido"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/registrarCoche"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <Spinner
                android:id="@+id/txtMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:entries="@array/marcas"
                android:textColor="@color/white"
                android:hint="@string/Macra"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/txtModelo"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/modelo"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/txtMatricula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/Matricula"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                />

            <EditText
                android:id="@+id/txtColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/Color"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                />

            <EditText
                android:id="@+id/txtDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/Date"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnRegisterCar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bordes_redondos_transparente"
        android:text="@string/RegistrarCoche"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>